--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/elboraki/abc-shop-bff#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "http-status-codes": "^2.2.0",
     "joi": "^17.9.2",
     "mongoose": "^6.0.0",
     "morgan": "^1.10.0"
