--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "http-status-codes": "^2.2.0",
     "joi": "^17.9.2",
     "mongoose": "^6.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "swagger-ui-express": "^4.6.3"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
