--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "homepage": "https://github.com/elboraki/abc-shop-bff#readme",
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "http-status-codes": "^2.2.0",
     "joi": "^17.9.2",
